Position fixed from footer was removed, so the white space on the bottom was removed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,6 @@ styling for placeholder text in the search box
 }
 
 footer {
-    position: fixed;
     width: 100%;
     bottom: 0;
     background-color: #06212c00;
